@@ -48,7 +48,7 @@ gnobots2_LDADD = \
 	../libgames-support/libgames-support.la \
 	$(INTLLIBS)
 
-appicon_DATA = gnome-gnobots2.png
+appicon_DATA = gnome-gnobots2.png teleport.png rteleport.png
 
 pixmap_DATA = gnomes.png \
               cows.png \
